fix alignment of tags

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -28,7 +28,7 @@ body{
 h1{
   font-size: 69px;
   font-weight: 100;
-  margin-bottom: 10px;
+  margin-bottom: 30px;
 }
 
 h2{
@@ -74,26 +74,12 @@ a{
   line-height: 1;
   font-size: 12px;
   border-radius: 3px;
-  border: 1px solid $highlight;
-  margin: 0 3px;
-  &:last-child{
-    margin-right: 0;
-
-  }
-
-  &:first-child{
-    margin-left: 0;
-  }
-
+	border: 1px solid $highlight;
 
   &:hover{
     color: $highlight;
     background: $light;
   }
-}
-
-.container{
-  width: 1000px;
 }
 
 input, textarea{
